module.exports = class SnapshotException extends Error {
}