const SnapshotException = require("./SnapshotException");
module.exports = class SnapshotNotCreatedException extends SnapshotException {
}