const AmiException = require('./AmiException');
module.exports = class InstanceNotFoundException extends AmiException {
}