const AmiException = require('./AmiException');
module.exports = class AmiInvalidNumberException extends AmiException {
}