const AmiException = require('./AmiException');
module.exports = class AmiNotFoundException extends AmiException {
}