module.exports = class InstanceException extends Error {
}