const SnapshotException = require("./SnapshotException");
module.exports = class SnapshotAlreadyExistException extends SnapshotException {
}