const SnapshotException = require("./SnapshotException");
module.exports = class SnapshotNotFoundException extends SnapshotException {
}