@startuml
'https://plantuml.com/class-diagram

package "Backup"{
    'classes and interfaces
    class AmiHelper{
        +constructor(string : regionName)
        -find(string : name):object
        +create(string : name, string : instanceName):object
        +delete(string : name):void
        +describeFromInstance(string: instanceName):array
        +deleteFromInstance(string: instanceName): void
        +hasMoreThanXAmiFromInstance(string : instanceName,int : number):bool
    }

    class SnapshotHelper{
        +constructor(string : regionName)
        -find(string : name):object
        -findVolume(string : name):object
        +exists(string : name):bool
        +create(int: volumeID, string : name, string : description = null):object
        +delete(string : name):void
        +getVolumeId(string : name):string
        +findAllByVolume(string : volumeName):array
        +deleteAllByVolume(string : volumeName):void
        +hasMoreThanXSnapshotFromVolume(string : volumeName,int : number):bool
    }

    class InstanceHelper{
        +constructor(string : regionName)
        -find(string : name):object
        +instanceId(string : name):string

    }
     class DmlHelper{
        +Constructor(awsClient : AwsCloudClientImpl)
        +Exists(int : id):boolean
        +Find(string : name):object
        +Create(string : name, string : role, string :type,string : instanceName):object
        +Delete(int : id)

    class AmiException{}
    class AmiAlreadyExistsException{}
    class AmiNotFoundException{}
    class AmiInvalidNumberException{}

    class SnapshotException{}
    class SnapshotNotFoundException{}
    class SnapshotAlreadyExistException{}
    class SnapshotNotCreatedException{}
    class SnapshotVolumeNotFoundException{}

    class InstanceException
    class InstanceNotFoundException

    'relations

    AmiException <|-- AmiAlreadyExistsException
    AmiException <|-- AmiNotFoundException
    AmiException <|-- AmiInvalidNumberException

    AmiHelper ..> AmiAlreadyExistsException :throw
    AmiHelper ..> AmiNotFoundException :throw
    AmiHelper ..> AmiInvalidNumberException :throw

    AmiHelper ..> InstanceHelper :use
    InstanceException <|-- InstanceNotFoundException
    InstanceHelper ..> InstanceNotFoundException :throw

    SnapshotException <|-- SnapshotNotFoundException
    SnapshotException <|-- SnapshotAlreadyExistException
    SnapshotException <|-- SnapshotNotCreatedException
    SnapshotException <|-- SnapshotVolumeNotFoundException

    SnapshotHelper ..> SnapshotNotCreatedException :throw
    SnapshotHelper ..> SnapshotVolumeNotFoundException :throw
    SnapshotHelper ..> SnapshotAlreadyExistException :throw
    SnapshotHelper ..> SnapshotNotFoundException :throw

    DlmException <|-- DlmNotFoundException
    DlmException <|-- DlmAlreadyExistException
    DlmException <|-- DlmCreatedException
    DlmException <|-- DlmDeleteException

    DmlHelper ..> DlmAlreadyExistException :throw
    DmlHelper ..> DlmCreatedException :throw
    DmlHelper ..> DlmDeleteException :throw
    DmlHelper ..>DlmNotFoundException

@enduml
